--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -79,9 +79,9 @@
         <item>BROADCAST_INTENT</item>
     </string-array>
     <string-array name="button_actions">
-        <item>Csengőhang indít</item>
+        <item>Csengés indít</item>
         <item>Vibra indít</item>
-        <item>Csengőhang állj</item>
+        <item>Csengés állj</item>
         <item>Vibra állj</item>
         <item>Helymeghatározás</item>
 <!-- TODO -->
@@ -100,7 +100,7 @@
 <!-- TODO -->
     <string name="custom_action_summary">http(s)://.. or intent action string</string>
 <!-- needs context, where does this option appear? -->
-    <string name="stop_ring">Csörgés állj</string>
+    <string name="stop_ring">Csengés állj</string>
 <!-- needs context, where does this option appear? -->
     <string name="stop_vibrate">Vibra állj</string>
     <string name="events_history">Előzmények</string>
