--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -15,8 +15,7 @@
         a szétkapcsolódás-figyelés.\n
         \n
         Az alkalmazást szabadidőmben fejlesztem, adományokat szívesen fogadok :) Köszönöm!</string>
-<!-- is this toast *only* thrown by BluetoothLEService ? -->
-    <string name="something_goes_wrong">Valami hiba történt :(</string>
+    <string name="something_goes_wrong">Nem sikerült megcsippantani az eszközt.</string>
     <string name="ble_not_supported">Okoskészüléked nem tudja kezelni a Bluetooth Low Energy (BLE) szabványt, ez általában hardveres korlátozás, amin nem tud rendszerfrissítés segíteni.</string>
     <string name="preferences">Beállítások</string>
 <!-- needs context, is this an intent? where is the text appear then? -->
@@ -98,7 +97,7 @@
 <!-- needs context, where does this option appear? -->
     <string name="stop_vibrate">Vibra állj</string>
     <string name="events_history">Előzmények</string>
-<!-- these are NEW, previously not existing texts for the events, as they should be translated too. NOT ALL events are here, please complete -->
+<!-- these are NEW, previously not existing texts for the events, as they should be translated too. NOT ALL events are here, please complete. update: i've parsed the java code, looks like i've got all, am i? -->
     <string name="event_connected">Kapcsolódás</string>
     <string name="event_out_of_range">Szétkapcsolódás</string>
     <string name="event_immediate_alert">Csippanás</string>
