--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -42,8 +42,7 @@
 <!-- needs screenshot, what is the text on the buttons, ok, cancel, remove? -->
     <string name="confirm_change_name">Biztos, hogy átnevezed az eszközt?</string>
     <string name="link_loss_disabled">Kikapcsoltad a Bluetooth Link Loss-t, egyes eszközök ezt elvesztésnek gondolják és riasztanak.</string>
-<!-- if the dashboard only has the battery level and the radio distance, i would rename this tab to "status". I can translate dashboard only to "control center" to hungarian, but having 2 gauges to read and nothing to set is not a _control_ center :) -->
-    <string name="dashboard">Irányítópult</string>
+    <string name="dashboard">Műszerfal</string>
 <!-- unused? -->
     <string name="battery_info">Elemtöltöttség</string>
 <!-- unused? -->
