--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -64,8 +64,7 @@
         <item>arrêter la sonnerie</item>
         <item>arrêter les vibrations</item>
         <item>capturer ma position</item>
-        <item>appeler une URL</item>
-        <item>envoyer un message technique</item>
+        <item>appeler une URL ou une action</item>
     </string-array>
     <string-array name="button_actions_values">
         <item>START_RING_PHONE</item>
@@ -74,7 +73,6 @@
         <item>STOP_VIBRATE_PHONE</item>
         <item>CAPTURE_POSITION</item>
         <item>CUSTOM_ACTION</item>
-        <item>BROADCAST_INTENT</item>
     </string-array>
     <string-array name="empty_array"/>
 </resources>
